[project]
name = "jfrog-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gw-jfrog-integration (>=0.1.1,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "acuity-core-pypi-prod"
url = "https://gwproductengineering.jfrog.io/artifactory/api/pypi/acuity-core-pypi-prod/simple"
priority = "primary"


[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"